--- a/appinfo.json
+++ b/appinfo.json
@@ -1,9 +1,9 @@
 {
-    "versionLabel": "0.1",
+    "versionLabel": "1.0",
     "uuid": "36ceec93-b32e-47e3-8353-971daf398007",
     "appKeys": {},
     "longName": "Casio AE-20W",
-    "versionCode": 1,
+    "versionCode": 2,
     "capabilities": [
         ""
     ],
@@ -15,6 +15,11 @@
     "resources": {
         "media": [
             {
+                "type": "png",
+                "name": "IMAGE_UTILITIES",
+                "file": "images/Battery.png"
+            },
+            {
                 "menuIcon": true,
                 "type": "png",
                 "name": "IMAGE_MENU",
@@ -23,7 +28,7 @@
             {
                 "characterRegex": "[-0-9:\\s]",
                 "type": "font",
-                "name": "FONT_DIGITAL_40",
+                "name": "FONT_DIGITAL_20",
                 "file": "fonts/DIGITALBOLD2.TTF"
             },
             {
@@ -35,7 +40,7 @@
             {
                 "characterRegex": "[-0-9:\\s]",
                 "type": "font",
-                "name": "FONT_DIGITAL_20",
+                "name": "FONT_DIGITAL_40",
                 "file": "fonts/DIGITALBOLD2.TTF"
             },
             {
