Added config_common.html, renamed Ressource

--- a/appinfo.json
+++ b/appinfo.json
@@ -50,7 +50,7 @@
             {
                 "type": "png",
                 "name": "IMAGE_BACKGROUND",
-                "file": "images/background.png"
+                "file": "images/Background.png"
             }
         ]
     }
